Fixed collapse button positions not initially set

--- a/styles/utils/pane_resizer.css
+++ b/styles/utils/pane_resizer.css
@@ -44,7 +44,3 @@
 .collapse-pane-button > div:active {
 	opacity: 1;
 }
-
-#right-pane-collapse-button {
-	left: 2px;
-}
